Bug fix on mobile

--- a/src/styles/Intro.scss
+++ b/src/styles/Intro.scss
@@ -1,5 +1,6 @@
 @import "./Colors.scss";
 @import "./Mixins.scss";
+@import "./Resolutions.scss";
 
 .intro {
   position: absolute;
@@ -94,7 +95,7 @@
 
 .snow {
   position: absolute;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   z-index: 2;
 
@@ -196,6 +197,43 @@
   left: 95%;
 }
 
+.fogContainer {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 2;
+  opacity: 0.8;
+
+  @include tablet {
+    opacity: 0.3;
+  }
+}
+
+.fogImg {
+  position: absolute;
+  height: 100vh;
+  width: 300vw;
+  z-index: 2;
+
+  &.--first {
+    background: url("../images/fog-1.png");
+    background-repeat: repeat-x;
+    background-size: cover;
+    background-position: center;
+    animation: fogMovingAnimation 60s linear infinite;
+  }
+
+  &.--second {
+    background: url("../images/fog-2.png");
+    background-repeat: repeat-x;
+    background-size: cover;
+    background-position: center;
+    animation: fogMovingAnimation 30s linear infinite;
+  }
+}
+
 @keyframes glitch {
   2%,
   64% {
@@ -235,39 +273,6 @@
   }
   62% {
     transform: translate(-22px, 5px) skew(21deg);
-  }
-}
-
-.fogContainer {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: 2;
-  opacity: 0.3;
-}
-
-.fogImg {
-  position: absolute;
-  height: 100vh;
-  width: 300vw;
-  z-index: 2;
-
-  &.--first {
-    background: url("../images/fog-1.png");
-    background-repeat: repeat-x;
-    background-size: cover;
-    background-position: center;
-    animation: fogMovingAnimation 60s linear infinite;
-  }
-
-  &.--second {
-    background: url("../images/fog-2.png");
-    background-repeat: repeat-x;
-    background-size: cover;
-    background-position: center;
-    animation: fogMovingAnimation 30s linear infinite;
   }
 }
 
